--- a/style.css
+++ b/style.css
@@ -1,8 +1,8 @@
 body {background: #FFF; font-family: 'Open Sans', sans-serif;}
 .menu, .menu ul, .menu li {width: 140px; margin-top: 3px;}
 .menu li a {font-size: 13px}
-.menu .menuLevel1 {margin-left: 20px}
-.menuPosition {width: 209px; height: 379px; background-size: contain; background-repeat: no-repeat;}
+.menu .menuLevel1 {margin-left: 32px}
+.menuPosition {width: 209px; height: 379px; background-size: contain; background-repeat: no-repeat; padding-top: 124px;}
 .menu ul.menuLevel1 a.menuVisible:hover, .menu ul.menuLevel2 a.menuVisible:hover {background-color: rgb(0, 162, 227)}
 td.header {background-image : url(https://cdn.rawgit.com/sachacohenfr/grhgcdls/master/copenhague_banner.png); background-repeat: no-repeat; background-position: center center;}
 .mainContent {background-color: #FFFFFF; margin: 5px 0px 0px 5px; padding: 5px; }
