--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-body {background: #FFF; font-family: 'Open Sans', sans-serif;}
+body {background: #FFF; font-family: 'Dosis', sans-serif;}
 .menu, .menu ul, .menu li {width: 140px; margin-top: 3px;}
 .menu li a {font-size: 13px}
 .menu .menuLevel1 {margin-left: 32px}
