--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {background: #FFF; font-family: 'Dosis', sans-serif !important;}
 .menu, .menu ul, .menu li {width: 140px; margin-top: 3px;}
-.menu li a {font-size: 13px}
+.menu li a {font-size: 14px; letter-spacing: 0.08em}
 .menu .menuLevel1 {margin-left: 32px}
 .menuPosition {width: 209px; height: 379px; background-size: contain; background-repeat: no-repeat; padding-top: 124px;}
 .menu ul.menuLevel1 a.menuVisible:hover, .menu ul.menuLevel2 a.menuVisible:hover {background-color: rgb(0, 162, 227)}
