--- a/style.css
+++ b/style.css
@@ -14,3 +14,4 @@ td.header {background-image : url(https://sachacohenfr.github.io/grhgcdls/copenh
 #SoleadFooter #cegibat {float: left; height: 70px; margin-left: 215px;}
 #SoleadFooter #grdf {float: right; height: 70px;}
 .menuItemLevel1Highlight {background-color: transparent !important; color: color: rgb(0, 162, 227);}
+.mainContent p span { font-family: 'Dosis', sans-serif !important;}
