--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ td.header {background-image : url(https://sachacohenfr.github.io/grhgcdls/copenh
 .mainContent p {font-size: 15px; letter-spacing: -0.5px;}
 #rever {width: 807px; margin-left: 5px}
 #BonjourImg {left: 358.5px;position: relative;}
-#SoleadFooter {height: 70px; background-color: #FFFFFF; margin-top: 40px;}
+#SoleadFooter {height: 70px; background-color: #FFFFFF; margin-top: 40px; box-shadow: 0px -31px 23px -32px #483b50;}
 #SoleadFooter div {height: 70px;width: 1026px; margin-left: auto; margin-right: auto;}
 #SoleadFooter #cegibat {float: left; height: 70px; margin-left: 215px;}
 #SoleadFooter #grdf {float: right; height: 70px;}
