--- a/style.css
+++ b/style.css
@@ -16,6 +16,6 @@ td.header {background-image : url(https://sachacohenfr.github.io/grhgcdls/copenh
 .menuItemLevel1Highlight {background-color: transparent !important; color: color: rgb(0, 162, 227);}
 .mainContent p span { font-family: 'Dosis', sans-serif !important; letter-spacing: 0.08px; font-size: 18px !important; color: #282828 !important;}
 .mainContent p span.hello {font-size: 22px !important; text-transform: uppercase; color: #039cbf !important}
-.mainContent p span strong { font-family: 'Dosis', sans-serif !important; font-weight: bold; color: #77448f !important;}
+.mainContent p strong span  { font-family: 'Dosis', sans-serif !important; font-weight: bold; color: #77448f !important;}
 .menu ul.menuLevel1 a.menuItemLevel1Highlight, .menu ul.menuLevel2 a.menuItemLevel2Highlight {color: rgb(0, 162, 227) !important;}
 .menu ul.menuLevel1 a.menuVisible:hover, .menu ul.menuLevel2 a.menuVisible:hover {background-color: #FFF !important}
