--- a/style.css
+++ b/style.css
@@ -20,3 +20,5 @@ td.header {background-image : url(https://sachacohenfr.github.io/grhgcdls/copenh
 .menu ul.menuLevel1 a.menuItemLevel1Highlight, .menu ul.menuLevel2 a.menuItemLevel2Highlight {color: rgb(0, 162, 227) !important;}
 .menu ul.menuLevel1 a.menuVisible:hover, .menu ul.menuLevel2 a.menuVisible:hover {background-color: #FFF !important}
 #rever {display: none;}
+.contentGeneral {padding-left: 80px;
+    padding-right: 80px;}
