--- a/style.css
+++ b/style.css
@@ -11,8 +11,8 @@ td.header {background-image : url(https://sachacohenfr.github.io/grhgcdls/copenh
 #BonjourImg {left: 358.5px;position: relative;}
 #SoleadFooter {height: 70px; background-color: #FFFFFF; margin-top: 40px; box-shadow: 0px -31px 23px -32px #483b50;}
 #SoleadFooter div {height: 70px;width: 1026px; margin-left: auto; margin-right: auto;}
-#SoleadFooter #cegibat {float: left; height: 70px; margin-left: 215px;}
-#SoleadFooter #grdf {float: right; height: 70px;}
+#SoleadFooter #cegibat {float: left; height: 70px; margin-left: 215px; display: none;}
+#SoleadFooter #grdf {float: right; height: 70px; display: none;}
 .menuItemLevel1Highlight {background-color: transparent !important; color: color: rgb(0, 162, 227);}
 .mainContent p span { font-family: 'Dosis', sans-serif !important; letter-spacing: 0.08em; font-size: 18px !important; color: #282828 !important;}
 .mainContent p span.hello {font-size: 22px !important; text-transform: uppercase; color: #039cbf !important}
